--- a/app/src/main/res/layout/activity_jadwal.xml
+++ b/app/src/main/res/layout/activity_jadwal.xml
@@ -6,25 +6,70 @@
     android:layout_height="match_parent"
     tools:context=".Jadwal">
 
-    <EditText
-        android:id="@+id/txtDateEntered"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="69dp"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:gravity="center_horizontal"
-        android:hint="DD-MM-YYYY" />
-
-    <ImageView
-        android:id="@+id/imageGen"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Silahkan Pilih Waktu :"
+        android:textSize="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/txtDateEntered"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="39dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:gravity="center_horizontal"
+            android:hint="DD-MM-YYYY" />
+
+        <EditText
+            android:id="@+id/txtTimeEntered"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="27dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:gravity="center_horizontal"
+            android:hint="8 Pagi/1 Siang" />
+
+        <ImageView
+            android:id="@+id/imageGen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+
+        <Button
+            android:id="@+id/btn_pesan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pesan" />
+
+        <TextView
+            android:id="@+id/tv_pesan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="-" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_pesan"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
